<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_ice_cream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.booboo.icecream.FindIceCream">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:id="@+id/linear1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/enter"
            android:hint="food type"
            android:ems="10"
            android:layout_marginBottom="19dp"
            android:id="@+id/enter" />
        <Switch
            android:text="@string/switchtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear1"
        android:layout_marginTop="15dp"
        android:id="@+id/linear2">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="39dp"
            android:id="@+id/spinner"
            android:entries="@array/favor"
           />

        <ToggleButton
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cuptoggleButton"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:id="@+id/linear3">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iceRadioGroup"
            android:orientation="horizontal">

        <RadioButton
            android:text="@string/ic_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:id="@+id/radioButton" />

        <RadioButton
            android:text="@string/fz_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:text="@string/g_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
        />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear3"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:id="@+id/linear4">

        <CheckBox
            android:text="@string/s_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="53dp"
            android:id="@+id/checkBox"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp" />

        <CheckBox
            android:text="@string/h_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3"
            android:layout_marginRight="54dp"
            android:layout_marginEnd="54dp" />

        <CheckBox
            android:text="@string/n_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2" />

    </LinearLayout>


    <ImageView
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/caramel"
        android:id="@+id/imageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear5"
        android:layout_below="@+id/linear4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView">
        <Button
            android:text="@string/treatme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="findsweets (FindIceCream)" />

        <Button
            android:text="@string/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" />

        <TextView
            android:text="@string/message"
            android:hint="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messagetextView" />

    </LinearLayout>

</RelativeLayout>